# galatea

./: .gitignore  Cargo.toml  LICENSE  README.md
example/: stacks.conf  tasks.conf
example/galatea-tasks/: ansible01.7z  install.sh  playbook.yaml
src/: config.rs  downloader.rs  executor.rs  logger.rs  main.rs  stack.rs  task.rs  utils.rs
src/ui/: app.rs  log_view.rs  mod.rs  stack_view.rs  task_view.rs  theme.rs
src/ui/components/: mod.rs  selectable_view.rs  selection.rs  stack_impl.rs  task_impl.rs
