[package]
name = "galatea"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.40"
confucius = "0.2.2"
cursive = "0.21.1"
dirs = "6.0.0"
env_logger = "0.11.8"
flate2 = "1.1.1"
log = "0.4.27"
reqwest = { version = "0.12.15", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tar = "0.4.44"
thiserror = "2.0.12"
toml = "0.8.21"
zip = "2.6.1"
libc = "0.2.172"
clap = "4.5.37"
lazy_static = "1.5.0"
