[package]
name = "galatea"
version = "0.2.0"
edition = "2024"
authors = ["Matteo Kutufa <mk@mitocode.eu>"]
description = "A Rust utility to setup your servers or workstations."
license = "MIT"
readme = "README.md"
repository = "https://github.com/matteokutufa/galatea"
keywords = [ "configuration", "utility", "yaml", "automation" ]
categories = [ "utility", "system-utility", "configuration-utility"]

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
cursive = "0.21.1"
dirs = "6.0.0"
env_logger = "0.11.8"
flate2 = "1.1.1"
log = "0.4.27"
reqwest = { version = "0.12.15", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tar = "0.4.44"
thiserror = "2.0.12"
toml = "0.8.22"
zip = "2.6.1"
libc = "0.2.172"
clap = "4.5.37"
lazy_static = "1.5.0"
signal-hook = "0.3.17"

# Profilo di release ottimizzato per Galatea
[profile.release]
# Ottimizzazione massima per le prestazioni
opt-level = 3

# Link Time Optimization (LTO) per ridurre la dimensione e migliorare le prestazioni
# "fat" per la massima ottimizzazione, anche se aumenta i tempi di compilazione
lto = "fat"

# Inline più aggressivo per funzioni piccole
codegen-units = 1

# Abilita le ottimizzazioni specifiche per la CPU di compilazione
# Commenta questa riga se vuoi distribuire l'eseguibile su macchine diverse
# target-cpu = "native"

# Rimuove le informazioni di debug per ridurre la dimensione
debug = false

# Abilita le panic come abort invece di unwind per ridurre la dimensione
panic = 'abort'

# Ottimizza per la dimensione del codice (elimina codice non utilizzato)
strip = true

# Incrementa il numero di passaggi di ottimizzazione
# overflow-checks = false  # Disabilita solo se sei sicuro che non ci siano overflow


# Profilo per sviluppo veloce
[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
debug-assertions = true

# Profilo per test
[profile.test]
opt-level = 0
debug = true
overflow-checks = true
debug-assertions = true

# Profilo per benchmark
[profile.bench]
opt-level = 3
debug = false
lto = true
codegen-units = 1


# Profilo personalizzato per release rapida (per test pre-produzione)
[profile.release-fast]
inherits = "release"
lto = "thin"
codegen-units = 16

# Dipendenze specifiche per la compilazione
[build-dependencies]
# Aggiungi qui se hai dipendenze di build

# Configurazione delle features
[features]
default = []

# Feature per logging avanzato (disabilitato in produzione per prestazioni)
advanced-logging = []

# Feature per supporto multi-lingua
# multi-lang = []

# Feature per GUI aggiuntiva
# gui = []

